core/opentelemetry/v1_Service_open-telemetry-opentelemetry-operator-webhook.yaml
# Source: opentelemetry-operator/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    helm.sh/chart: opentelemetry-operator-0.47.0
    app.kubernetes.io/name: opentelemetry-operator
    app.kubernetes.io/version: "0.93.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: open-telemetry
    app.kubernetes.io/component: controller-manager
  name: open-telemetry-opentelemetry-operator-webhook
  namespace: vynil-monitor
spec:
  ports:
    - port: 443
      protocol: TCP
      targetPort: webhook-server
  selector:
      app.kubernetes.io/name: opentelemetry-operator
      app.kubernetes.io/component: controller-manager
