core/opentelemetry/v1_Service_open-telemetry-opentelemetry-operator.yaml
# Source: opentelemetry-operator/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    helm.sh/chart: opentelemetry-operator-0.47.0
    app.kubernetes.io/name: opentelemetry-operator
    app.kubernetes.io/version: "0.93.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: open-telemetry
    app.kubernetes.io/component: controller-manager
  name: open-telemetry-opentelemetry-operator
  namespace: vynil-monitor
spec:
  ports:
    - name: https
      port: 8443
      protocol: TCP
      targetPort: https
    - name: metrics
      port: 8080
      protocol: TCP
      targetPort: metrics
  selector:
      app.kubernetes.io/name: opentelemetry-operator
      app.kubernetes.io/component: controller-manager
